fix: basic functionality are now working.